--- a/css/main.css
+++ b/css/main.css
@@ -15,9 +15,10 @@ html {
 }
 
 body {
-  position: inherit;
-  width: 100%;
-  height: 100%;
+  margin: 0;
+    /* position: inherit;
+    width: 100%;
+    height: 100%; */
 }
 
 *, *::before, *::after {
@@ -34,6 +35,7 @@ body {
 }
 
 nav {
+  padding: 1em;
   list-style: none;
   display: grid;
   grid-template-areas:
@@ -47,11 +49,13 @@ nav li a {
 .dots-nav {
   grid-area: navigation;
   margin-top: 4em;
+  text-align: center;
 }
 
 .logo-small {
+  margin-top: 35px;
   grid-area: logo;
-  margin: 35px 0 0 5px;
+  text-align: center;
 }
 
 main {
